// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (a record) 1`] = `
{
  "lines": 1413,
  "sha256": "9ce2a51dd24e8300e0df4d7d37c27096ba68274fa01cdd4b5d8ffced1928fc8a",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "65bdea18ae3beba13b81c4ffd9ce4c364ed6e6427f978e3837efada682b4e4b4",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (a record) 1`] = `
{
  "lines": 1015,
  "sha256": "747930f7031880542c64eda9f4152d2810fb74036f0df66a4c31176e3dfb5f87",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "a57081b6e176bfbe22c82396590e6fdf6921396a04e3d2e4067e9502d1cdbde0",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (the tutorial route, type=progress) 1`] = `
{
  "lines": 1036,
  "sha256": "9d3e833371020a00bc85f8ac9ba7e195efd3efff80c1952dc560c8d60e201909",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (a record) 1`] = `
{
  "lines": 863,
  "sha256": "df4ec8cbec4fd18fd9f1814ea0dc1c4beefba48347f3e7318e31527c942c7792",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (project only: the create form) 1`] = `
{
  "lines": 746,
  "sha256": "46f5f01eca21e8983c95ce9ad6e0699476d458f9c68a608cfe8e5f750aa8269d",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (a record) 1`] = `
{
  "lines": 807,
  "sha256": "6d3505861036b8b72ef07060adce7aff0557f3c80541cac44122ae682d8c1943",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (project only) 1`] = `
{
  "lines": 726,
  "sha256": "857ef90b025feee0e8c46a19c58cb19882ff3f066cf3bde1bf74edba1a374f52",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved credit: the bill bar says why) 1`] = `
{
  "lines": 991,
  "sha256": "46e0c09e40498e7f8ff910136627725b0e9adcfb0c7fadf4d8863ff6f25c5b32",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved, billable: the bill bar) 1`] = `
{
  "lines": 1003,
  "sha256": "4f9cbd30c5197dd7ef6b78b4c6172f8f6cd16aa998cd9279ed59dc22fc3436b8",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (rejected: locked, no bar) 1`] = `
{
  "lines": 997,
  "sha256": "bdeffc2ec36cdbdbb2cdfa1b11677727529625ca5302b20a104c6880360fe25f",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) invoice (sent: reminder and pay link) 1`] = `
{
  "lines": 1010,
  "sha256": "5d40cca352bea28c8fb918ff468878a38901806079432e2a4d761af7caf79f5f",
}
`;
